modify openapi & databas connection
