# src/main/java/com/devonfw/app/groupordermangemnt/service/api/GroupOrdersApi.java
@@ -1,0 +1,75 @@
+package com.devonfw.app.groupordermangemnt.service.api;
+
+import java.util.List;
+
+import javax.enterprise.context.ApplicationScoped;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+
+import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
+
+import com.devonfw.app.groupordermangemnt.common.GroupOrderTo;
+import com.devonfw.app.groupordermangemnt.common.ItemTo;
+
+import io.quarkiverse.openapi.generator.annotations.GeneratedClass;
+import io.quarkiverse.openapi.generator.annotations.GeneratedMethod;
+import io.quarkiverse.openapi.generator.annotations.GeneratedParam;
+
+/**
+ * Pikerando API
+ * <p/>
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ */
+@Path("/groupOrders")
+@RegisterRestClient(configKey = "openapi_yaml")
+@GeneratedClass(value = "openapi.yaml", tag = "GroupOrders")
+@ApplicationScoped
+public interface GroupOrdersApi {
+
+  /**
+   * Create an groupOrder
+   *
+   */
+  @POST
+  @Consumes({ "application/json" })
+  @Produces({ "application/json" })
+  @GeneratedMethod("createGroupOrder")
+  public void createGroupOrder(GroupOrderTo groupOrderTo);
+
+  /**
+   * Create an item
+   *
+   */
+  @POST
+  @Path("/{groupOrderId}/itmes")
+  @Consumes({ "application/json" })
+  @Produces({ "application/json" })
+  @GeneratedMethod("createItem")
+  public void createItem(@GeneratedParam("groupOrderId") @PathParam("groupOrderId") String groupOrderId, ItemTo itemTo);
+
+  /**
+   * List all GroupOrders
+   *
+   */
+  @GET
+  @Produces({ "application/json" })
+  @GeneratedMethod("listGroupOrders")
+  public List<GroupOrderTo> listGroupOrders(@GeneratedParam("limit") @QueryParam("limit") Integer limit);
+
+  /**
+   * Info for a specific groupOrder
+   *
+   */
+  @GET
+  @Path("/{groupOrderId}")
+  @Produces({ "application/json" })
+  @GeneratedMethod("showGroupOrderById")
+  public List<ItemTo> showGroupOrderById(
+      @GeneratedParam("groupOrderId") @PathParam("groupOrderId") String groupOrderId);
+
+}
