# src/main/java/com/devonfw/app/ordermangemnt/service/api/OrdersApi.java
@@ -1,84 +1,0 @@
-package com.devonfw.app.ordermangemnt.service.api;
-
-import org.openapi.quarkus.openapi_yaml.model.InlineObject;
-import org.openapi.quarkus.openapi_yaml.model.InlineObject1;
-
-import com.devonfw.app.ordermangemnt.common.ErrorTo;
-import com.devonfw.app.ordermangemnt.common.ItemTo;
-import com.devonfw.app.ordermangemnt.common.OrderTo;
-
-import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
-
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.util.List;
-import java.util.Map;
-import javax.ws.rs.*;
-import javax.ws.rs.core.MediaType;
-
-import javax.enterprise.context.ApplicationScoped;
-
-import io.quarkiverse.openapi.generator.annotations.GeneratedClass;
-import io.quarkiverse.openapi.generator.annotations.GeneratedMethod;
-import io.quarkiverse.openapi.generator.annotations.GeneratedParam;
-
-/**
-  * Pikerando API
-  * <p/>No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-  */
-@Path("/orders")
-@RegisterRestClient( configKey="openapi_yaml")
-@GeneratedClass(value="openapi.yaml", tag = "Orders")
-@ApplicationScoped
-public interface OrdersApi {
-
-    /**
-     * Create an item
-     *
-     */
-    @POST
-    @Path("/{orderId}/itmes")
-    @Consumes({"application/json"})
-    @Produces({"application/json"})
-    @GeneratedMethod ("createIteam")
-    public void createIteam(
-        @GeneratedParam("orderId") @PathParam("orderId") String orderId, 
-        InlineObject1 inlineObject1
-    );
-
-    /**
-     * Create an order
-     *
-     */
-    @POST
-    @Consumes({"application/json"})
-    @Produces({"application/json"})
-    @GeneratedMethod ("createOrder")
-    public void createOrder(
-        InlineObject inlineObject
-    );
-
-    /**
-     * List all orders
-     *
-     */
-    @GET
-    @Produces({"application/json"})
-    @GeneratedMethod ("listOrders")
-    public List<OrderTo> listOrders(
-        @GeneratedParam("limit") @QueryParam("limit") Integer limit
-    );
-
-    /**
-     * Info for a specific order
-     *
-     */
-    @GET
-    @Path("/{orderId}")
-    @Produces({"application/json"})
-    @GeneratedMethod ("showOrderById")
-    public List<ItemTo> showOrderById(
-        @GeneratedParam("orderId") @PathParam("orderId") String orderId
-    );
-
-}
